tests/baselines/reference/nullishCoalescingOperatorInParameterBindingPattern.2(strict=true,target=esnext).errors.txt
nullishCoalescingOperatorInParameterBindingPattern.2.ts(3,6): error TS2537: Type 'undefined' has no matching index signature for type 'string'.
nullishCoalescingOperatorInParameterBindingPattern.2.ts(6,6): error TS2537: Type 'undefined' has no matching index signature for type 'string'.
nullishCoalescingOperatorInParameterBindingPattern.2.ts(6,27): error TS2339: Property 'd' does not exist on type 'undefined'.


==== nullishCoalescingOperatorInParameterBindingPattern.2.ts (3 errors) ====
    // https://github.com/microsoft/TypeScript/issues/36295
    const a = (): string | undefined => undefined;
    (({ [a() ?? "d"]: c = "" }) => { var a; })();
         ~~~~~~~~~~
!!! error TS2537: Type 'undefined' has no matching index signature for type 'string'.
    
    const x = "";
    (({ [a() ?? "d"]: c = "", d = x }) => { var x; })();
         ~~~~~~~~~~
!!! error TS2537: Type 'undefined' has no matching index signature for type 'string'.
                              ~
!!! error TS2339: Property 'd' does not exist on type 'undefined'.